Fixed quote and text-align for mobile.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2595,7 +2595,6 @@
 				.spotlight .content {
 					padding: 4em 3em 2em 3em ;
 					max-width: none;
-					text-align: center;
 					width: 100%;
 				}
 
